Changelog
=========


2.1.4 (unreleased)
------------------

- Archiveform: Fixed filing_prefix field (visible_terms_from_registry attribute).
  Issue #1645 Probleme beim Dossier abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1645/
  [phgross]

- Fixed filing action generation, add validation for existing filing numbers.
  Issue #1644 Frage nach exestierender Ablagenummer bei Dossierabschluss obwohl es keine hat
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1644/
  [phgross]

- Fixed METHOD_RESOLVING_EXISTING_FILING use realy the existing values.
  [phgross]

- Fixed archiving methods 'only_resolve' and 'only_number', in the dossier archive form.
  [phgross]


2.1.3 (2012-06-28)
------------------

- Dossier Schema: Added description for the filing_prefix field.
  [phgross]

- Templatedossier: Adjust redirecting after document creation.
  [phgross]

- Templatedossier document creation: Add the file before the initial version is created.
  [phgross]


2.1.2 (2012-06-27)
------------------

- Made recursive_resolve safe: works now also with cancelled subdossiers.
  Do not attend documents from a cancelled dossier, in the earliest enddate calculation.
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- ResolveConditions: Validate the endate of the main dossier, not till the archive form is displayed.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525
  [phgross]

- Fixed Templatedossier: create a newfile NamedFile object with the same data, instead of set only a reference.
  Issue #1368 Bearbeitung von Vorlagen (Metadaten und Dokumente)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1368/
  [phgross]


2.1.1 (2012-06-22)