@@ -5,6 +5,11 @@ Changelog
 2.1.4 (unreleased)
 ------------------
 
+- Added validation for the filing year field.
+  Issue #1670 Dossier abschliessen: Feld Ablagejahr wird nicht valdiert.
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1670
+  [phgross]
+
 - Archiveform: Fixed filing_prefix field (visible_terms_from_registry attribute).
   Issue #1645 Probleme beim Dossier abschliessen
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1645/
